--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "mfe-product-list-app"]
 	path = mfe-product-list-app
 	url = https://github.com/tranvanhuyhoang/mfe-product-list-app.git
+[submodule "mfe-product-detail-app"]
+	path = mfe-product-detail-app
+	url = git@github.com:tranvanhuyhoang/mfe-product-detail-app.git
