--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "mfe-product-cart"]
 	path = mfe-product-cart
 	url = git@github.com:tranvanhuyhoang/mfe-product-cart.git
+[submodule "mfe-share-lib"]
+	path = mfe-share-lib
+	url = https://github.com/tranvanhuyhoang/mfe-share-lib.git
