add mfe-share-lib submodule to lerna

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
       "mfe-product-cart",
       "mfe-product-detail",
       "mfe-product-relate",
+      "mfe-share-lib",
       "root-file"
     ]
   },
